fix: set scrollbar height to zero for improved aesthetics

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@
 
 ::-webkit-scrollbar {
   width: 5px;
+  height: 0;
 }
 
 ::-webkit-scrollbar-thumb {
